--- a/merchandise.web/src/main/webapp/resources/person/viewPerson.xhtml
+++ b/merchandise.web/src/main/webapp/resources/person/viewPerson.xhtml
@@ -55,7 +55,7 @@
    
 	 </p:panelGrid>
 	 
-	 <p:gmap center="36.879466, 30.667648" zoom="15" type="HYBRID"
+	 <p:gmap center="36.879466, 30.667648"  type="HYBRID"
                                     style="width:600px;height:400px" model="#{mapsController.model(cc.attrs.person.addresses)}"/>
 
 	
