--- a/merchandise.web/src/main/webapp/register.xhtml
+++ b/merchandise.web/src/main/webapp/register.xhtml
@@ -97,11 +97,12 @@ xmlns:pers="http://java.sun.com/jsf/composite/person" >
                <p:tab   id="overview" title="#{message.register_overview_tab}" >  
                <p:messages errorClass="error" globalOnly="true" />  
              <p:panel header="#{message.register_overview_headline}">  
+            
                   <!-- f:event listener="#{registrationWizardController.initCustomer(registration)}" type="preRenderView" /-->
              		<pers:viewPerson person="#{registration.person}"  customer="#{registration.customer}"  user="#{registration.kind=='User'}" message="#{message}"/>
              		
              </p:panel>
-             <p:commandButton id="loginButton" value="#{message.register_overview_submit}"  
+             <p:commandButton update="overview"   process="@this" id="loginButton" value="#{message.register_overview_submit}"  action="login?faces-redirect=true"
 						actionListener="#{registrationWizardController.register(registration.customer.customer, registration.person.person)}"   style="float:right" />
 
              </p:tab>
