--- a/merchandise.web/src/main/webapp/register.xhtml
+++ b/merchandise.web/src/main/webapp/register.xhtml
@@ -102,8 +102,8 @@ xmlns:pers="http://java.sun.com/jsf/composite/person" >
              		<pers:viewPerson person="#{registration.person}"  customer="#{registration.customer}"  user="#{registration.kind=='User'}" message="#{message}"/>
              		
              </p:panel>
-             <p:commandButton update="overview"   process="@this" id="loginButton" value="#{message.register_overview_submit}"  action="login?faces-redirect=true"
-						actionListener="#{registrationWizardController.register(registration.customer.customer, registration.person.person)}"   style="float:right" />
+             <p:commandButton update="@form"   process="@this" id="registerButton" value="#{message.register_overview_submit}"  
+						action="#{registrationWizardController.register(registration.customer.customer, registration.person.person)}"   style="float:right" />
 
              </p:tab>
 
