Substitude LoginImpl with LoginAO (Proxy)

--- a/merchandise.web/src/main/webapp/login.xhtml
+++ b/merchandise.web/src/main/webapp/login.xhtml
@@ -55,8 +55,8 @@
 
 					<p:commandButton id="loginButton" value="#{message.login_login_button}"
 						icon="ui-icon-check"
-						actionListener="#{loginController.login(login)}"
-						style="float:right"  action="overview"/>
+						action="#{loginController.login(login)}"
+						style="float:right"   update="@form"/>
 
 					
 				</f:facet>
