--- a/merchandise.web/src/main/webapp/register.xhtml
+++ b/merchandise.web/src/main/webapp/register.xhtml
@@ -7,7 +7,7 @@ xmlns:p="http://primefaces.org/ui"
  xmlns:contact="http://java.sun.com/jsf/composite/contact"
 xmlns:pers="http://java.sun.com/jsf/composite/person" >
     <h:head>
-   
+   			<f:event listener="#{registrationWizardController.startConversation()}" type="preRenderView" />
     </h:head>
     <h:body>
  
