--- a/merchandise.web/src/main/webapp/login.xhtml
+++ b/merchandise.web/src/main/webapp/login.xhtml
@@ -98,7 +98,7 @@
 						  
 		  <p:commandButton id="selectCustomer" value="#{message.login_login_button}"
 						icon="ui-icon-check"
-						action="#{loginController.assignCustomer(login, login.customer.customer)}" 
+						action="#{loginController.assignCustomer(login.person.person, login.customer.customer, login.password)}" 
 						style="float:right"   update="@form"   process="@form" />
 						 <p:tooltip for="selectCustomer" value="#{message.login_select_customer_button_tt}" showEffect="fade" hideEffect="fade" />  
 						  
