--- a/merchandise.web/src/main/webapp/subjects.xhtml
+++ b/merchandise.web/src/main/webapp/subjects.xhtml
@@ -15,18 +15,18 @@ xmlns:ui="http://java.sun.com/jsf/facelets">
 			<h:form>
 			<h:panelGrid columns="1" styleClass="positionCentered">
 			<h:panelGrid columns="5" styleClass="centered">
-			<p:outputLabel for="subjectPager" value="Seite [1...#{paging.maxPages}]" />
-			 <p:spinner id="subjectPager"   min="1" max="#{paging.maxPages}" size="#{paging.maxPages}"  value="#{paging.currentPage}"/> 
+			<p:outputLabel for="subjectPager" value="Seite [1...#{subjectsModel.paging.maxPages}]" />
+			 <p:spinner id="subjectPager"   min="1" max="#{subjectsModel.paging.maxPages}" size="#{subjectsModel.paging.maxPages}"  value="#{subjectsModel.paging.currentPage}"/> 
 			<p:outputLabel for="namePattern" value="Produkt- Servicename" />
-			 <p:inputText id="namePattern"  value="name" />
-             <p:commandButton id="paging" value="suchen"  action="#{subjectController.subjects(subjectsModel, paging.paging)}"  update="@form" process="@form"  />
+			 <p:inputText id="namePattern"  value="#{subjectsModel.pattern}" />
+             <p:commandButton id="paging" value="suchen"  action="#{subjectController.subjects(subjectsModel)}"  update="@form" process="@form"  />
             </h:panelGrid>        
-			 <p:dataTable  id="subjects" var="subjectVar" paginator="false" rows="#{paging.pageSize}"   value="#{subjectsModel.commercialSubjects}"  selection="#{subjectsModel.selected}">  
+			 <p:dataTable  id="subjects" var="subjectVar" paginator="false" rows="#{subjectsModel.paging.pageSize}"   value="#{subjectsModel.commercialSubjects}"  selection="#{subjectsModel.selected}">  
 			
 			    <p:column selectionMode="single" style="width:2%" />  
   
-                <p:column headerText="Name" style="width:48%">   #{subjectVar.name} </p:column>  
-                <p:column headerText="Beschreibung" style="width:48%">   #{subjectVar.description} </p:column>  
+                <p:column headerText="Name">   #{subjectVar.name} </p:column>  
+                <p:column headerText="Beschreibung" >   #{subjectVar.description} </p:column>  
 			</p:dataTable>
 			</h:panelGrid>
              </h:form>
