notReadableConfiguration in ControllerInterfaces, fix logout in template (parameterInjection)

--- a/merchandise.web/src/main/webapp/masterlayout.xhtml
+++ b/merchandise.web/src/main/webapp/masterlayout.xhtml
@@ -21,7 +21,7 @@ xmlns:ui="http://java.sun.com/jsf/facelets" >
         		  <h:form>
         		  <p:menubar>  
         		      <p:submenu label="#{message.menu_file}" icon="ui-icon-document">  
-                         <p:menuitem value="#{message.menu_file_quit}" actionListener="#{loginController.abort(user.language)}" />  
+                         <p:menuitem value="#{message.menu_file_quit}" actionListener="#{loginController.abort}" />  
         		      </p:submenu>  
         		   
         		   <p:submenu label="#{message.menu_edit}" icon="ui-icon-pencil">
