--- a/merchandise.web/src/main/webapp/masterlayout.xhtml
+++ b/merchandise.web/src/main/webapp/masterlayout.xhtml
@@ -26,7 +26,8 @@ xmlns:ui="http://java.sun.com/jsf/facelets" >
         		   
         		   <p:submenu label="#{message.menu_edit}" icon="ui-icon-pencil">
         		   		 <p:menuitem value="#{message.menu_edit_overview}" url="/overview.xhtml" />   
-        		         <p:menuitem value="#{message.menu_edit_subjects}" url="/subjects.xhtml" />  
+        		         <p:menuitem value="#{message.menu_edit_subjects}" url="/subjects.xhtml" /> 
+        		          <p:menuitem value="#{message.menu_edit_opportunities}" url="/opportunities.xhtml" />  
         		   </p:submenu>
         		   </p:menubar>
         		  </h:form>
