--- a/merchandise.web/src/main/webapp/opportunities.xhtml
+++ b/merchandise.web/src/main/webapp/opportunities.xhtml
@@ -21,7 +21,7 @@ xmlns:ui="http://java.sun.com/jsf/facelets">
 			      <p:inputText id="namePattern"  value="#{opportunitiesModel.pattern}"  >
 			 	     <p:ajax event="change" update="@this"  process="@this"/>
 			      </p:inputText>
-                  <p:commandButton id="paging" value="suchen"     update="@form" process="@parent"  />     
+                  <p:commandButton id="paging" value="suchen"     update="@form" process="@parent"   action="#{opportunityController.opportunities()}"  />     
                </h:panelGrid>        
 			
 			   <p:dataTable  id="subjects" var="opportunityVar" paginator="false" rows="#{opportunitiesModel.paging.pageSize}"   value="#{opportunitiesModel.opportunities}"  selection="#{opportunitiesModel.selected}"  >  
