--- a/merchandise.web/src/main/webapp/opportunity.xhtml
+++ b/merchandise.web/src/main/webapp/opportunity.xhtml
@@ -50,7 +50,7 @@ xmlns:ui="http://java.sun.com/jsf/facelets">
 		  		<p:outputLabel  for="activities" value="#{message.opportunity_activities}" /> 
 		  		
 		  		
-		  		<p:tree id="activities" style="width:100%;height:200px"    dynamic="false"   value="#{activityClassifications.treeNode}" var="node"    selectionMode="checkbox"   >  
+		  		<p:tree id="activities" style="width:100%;height:200px"    dynamic="true"   value="#{activityClassifications.treeNode}" var="node"    selectionMode="checkbox"   >  
   
         			<p:treeNode>  
             			<h:outputText value="#{node}" >
