--- a/merchandise.web/src/main/webapp/opportunity.xhtml
+++ b/merchandise.web/src/main/webapp/opportunity.xhtml
@@ -162,7 +162,7 @@ xmlns:ui="http://java.sun.com/jsf/facelets">
 						style="float:right"   update="@form"/>
  </p:panelGrid>
  <in:input   title="#{message.opportunity_keyword_input_title}" submitText="#{message.opportunity_keyword_input_submit_text}" label="#{message.opportunity_keyword_input_label}"  saveAction="#{opportunityController.addKeyWord()}"/>
- <co:condition message="#{message}" addAction="#{opportunityController.addConditionValue()}" />
+ <co:condition message="#{message}" addAction="#{opportunityController.addConditionValue()}"  deleteAction="#{opportunityController.deleteConditionValue()}" />
  </h:form>
  </ui:define>
  </ui:composition>
