--- a/merchandise.web/src/main/webapp/resources/condition/condition.xhtml
+++ b/merchandise.web/src/main/webapp/resources/condition/condition.xhtml
@@ -106,7 +106,7 @@
 	
 	
 	<script type="text/javascript">  
-    		function handleInputRequest(xhr, status, args) {  
+    		function handleConditionRequest(xhr, status, args) {  
         		if(! args.validationFailed) {  
             		conditionDlg.hide(); 
         		} 
