--- a/merchandise.web/src/main/webapp/subjects.xhtml
+++ b/merchandise.web/src/main/webapp/subjects.xhtml
@@ -40,6 +40,7 @@ xmlns:ui="http://java.sun.com/jsf/facelets">
 	
 			   <h:panelGrid id="buttonPanel" columns="3"  rendered="#{!pageModel.selectMode}">
 			      <p:commandButton value="#{message.subject_add_button}" oncomplete="subjectDlg.show();"    process="@form"  update="@form"/>
+			        <p:commandButton  value="#{message.subjects_document_button}"   action="#{documentController.assignFromSubject()}"  rendered="#{not empty subjectsModel.selected}"   update="@form"  process="@this,subjects"  /> 
 			      <p:commandButton  value="#{message.subject_change_button}" update="@form" oncomplete="subjectDlg.show();" process="@this,subjects"  actionListener="#{subjectController.openChangeDialog()}"  rendered="#{not empty subjectsModel.selected}" />
 			      <p:commandButton value="#{message.subject_delete_button}"   action="#{subjectController.delete()}"  process="@this,subjects" update="@form" rendered="#{not empty subjectsModel.selected}" />	
 			   </h:panelGrid>
