put return urls into model

--- a/merchandise.web/src/main/webapp/showDocument.xhtml
+++ b/merchandise.web/src/main/webapp/showDocument.xhtml
@@ -23,7 +23,7 @@ xmlns:ui="http://java.sun.com/jsf/facelets">
 	
 		<f:facet name="header">
 	 		
-	       <h:link  outcome="uploadDocument.xhtml"> 
+	       <h:link  outcome="#{documentModel.returnFromShowAttachement}"> 
 	             <h:graphicImage url="cross.png" />
 	      </h:link>
 	       <h:outputText value="&nbsp;" />
