Refactoring byte[] to String for documentAttachements

--- a/merchandise.web/src/main/webapp/showDocument.xhtml
+++ b/merchandise.web/src/main/webapp/showDocument.xhtml
@@ -18,7 +18,7 @@ xmlns:ui="http://java.sun.com/jsf/facelets">
   <ui:define name="content">
      
       
-	  <p:panelGrid id="page" columns="1" >
+	  <p:panelGrid id="page" columns="1"  styleClass="centered">
 	  		<p:media value="#{documentController.url()}"   player="quicktime"  width="#{documentModel.width}" height="#{documentModel.height}" /> 
 	
 		<f:facet name="header">
