--- a/merchandise.web/src/main/webapp/masterlayout.xhtml
+++ b/merchandise.web/src/main/webapp/masterlayout.xhtml
@@ -31,6 +31,7 @@ xmlns:ui="http://java.sun.com/jsf/facelets" >
         		   		 <p:menuitem value="#{message.menu_edit_overview}" url="/overview.xhtml" />   
         		         <p:menuitem value="#{message.menu_edit_subjects}" url="/subjects.xhtml" /> 
         		          <p:menuitem value="#{message.menu_edit_opportunities}" url="/opportunities.xhtml" />  
+        		           <p:menuitem value="#{message.menu_edit_rules}" url="/rules.xhtml" />  
         		   </p:submenu>
         		   
         		   <p:submenu label="#{message.menu_order}" icon="ui-icon-search">
