Make it working, ruleInstance forEach, not understandable primefaces ajax shit

--- a/merchandise.web/src/main/webapp/resources/ruleInstance/ruleInstance.xhtml
+++ b/merchandise.web/src/main/webapp/resources/ruleInstance/ruleInstance.xhtml
@@ -87,7 +87,7 @@
 						<f:selectItems
 							value="#{ruleController.ruleItems()}" />  />
 			
-			 <p:ajax update="rulesGrid, rulesMessage"  process="@this" />		
+			 <p:ajax update="inputGrid"  process="@this" />		
 			 
 			
 			</p:selectOneMenu>
@@ -125,7 +125,8 @@
 		</h:panelGrid>
 		 <f:facet name="footer">
 		 	 <p:commandButton   value="#{cc.attrs.message.rule_instance_delete_parameter}"  action="#{cc.attrs.deleteAction}"   process="inputGrid"  update="inputGrid"    style="float:left" />   
-		     <p:commandButton   value="#{cc.attrs.message.rule_instance_add_parameter}" action="#{cc.attrs.addAction}"  process="inputGrid"  update="inputGrid"    style="float:right" />     
+		     <p:commandButton   value="#{cc.attrs.message.rule_instance_add_parameter}" action="#{cc.attrs.addAction}"  process="rulesGrid"  update="inputGrid"    style="float:right" />     
+           <p:messages  globalOnly="false" />  
         </f:facet> 
          </h:panelGrid>	 		
           
