--- a/merchandise.web/src/main/webapp/resources/ruleInstance/ruleInstance.xhtml
+++ b/merchandise.web/src/main/webapp/resources/ruleInstance/ruleInstance.xhtml
@@ -85,7 +85,7 @@
 						
 						 <f:selectItem itemLabel="#{message.select_empty}" itemValue="" />  
 						<f:selectItems
-							value="#{ruleController.ruleItems()}" />  />
+							value="#{ruleController.ruleItems()}" />  
 			
 			 <p:ajax update="inputGrid"  process="@this" />		
 			 
